jaeb-macros/tests/compile_fail/handler_mutable_event_ref.rs
//! Mutable event reference should fail.

use jaeb::{HandlerResult, handler};

#[derive(Clone)]
struct MyEvent;

#[handler]
async fn on_event(event: &mut MyEvent) -> HandlerResult {
    let _ = event;
    Ok(())
}

fn main() {}
