jaeb-macros/tests/compile_fail/handler_mutable_event_ref.stderr
error: event parameter must be a reference: `event: &EventType`
 --> tests/compile_fail/handler_mutable_event_ref.rs:9:26
  |
9 | async fn on_event(event: &mut MyEvent) -> HandlerResult {
  |                          ^^^^^^^^^^^^

warning: unused import: `HandlerResult`
 --> tests/compile_fail/handler_mutable_event_ref.rs:3:12
  |
3 | use jaeb::{HandlerResult, handler};
  |            ^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
